[tool.poetry]
name = "event-agent"
version = "0.1.0"
description = ""
authors = ["Vadim Lakhterman <vadim.l@labos.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.17.0"
pylint = "^3.3.7"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
